# datafusion-comet

./: .gitignore  DELTA_PR_SPLIT_PLAN.md  PR1-delta-port-findings.md  credential-audit.md  pom.xml  review-log-A1.md  review-log-A2.md  review-log-A3a.md  review-log-A3b.md  review-log-A4a.md  review-log-A4b.md  review-log-A5.md  review-log-A6a.md  review-log-A6b.md  review-log-A7.md  review-log-A8.md
.github/workflows/: delta_contrib_test.yml  delta_regression_test.yml  delta_spark_test.yml
common/src/main/scala/org/apache/comet/: CometConf.scala
common/src/main/scala/org/apache/comet/vector/: NativeUtil.scala
common/src/main/scala/org/apache/spark/sql/comet/util/: Utils.scala
contrib/delta/: pom.xml
contrib/delta/dev/: run-all-failures.sh  run-regression-targeted.sh  run-regression.sh  run-test.sh
contrib/delta/dev/diffs/: 3.3.2.diff  4.0.0.diff  4.1.0.diff
contrib/delta/docs/: 01-overview.md  02-planning.md  03-native-execution.md  04-design-decisions.md  05-build-and-deploy.md  06-fallback-and-ops.md  07-spark35-feasibility.md  08-known-limitations.md  README.md
contrib/delta/docs/archive/: 12-elimination-evaluation.md
contrib/delta/native/: Cargo.toml  build.rs
contrib/delta/native/src/: core_glue.rs  dv_filter.rs  dv_reader.rs  engine.rs  jni.rs  kernel_scan.rs  lib.rs  planner.rs  scan.rs  synthetic_columns.rs
contrib/delta/native/src/proto/: delta_operator.proto
contrib/delta/src/main/scala/org/apache/comet/contrib/delta/: CometDeltaNativeScan.scala  DeltaConf.scala  DeltaOperatorSerdeExtension.scala  DeltaReflection.scala  DeltaScanMetadata.scala  DeltaScanRule.scala  DeltaScanRuleExtension.scala  Native.scala  RowTrackingAugmentedFileIndex.scala
contrib/delta/src/main/scala/org/apache/spark/sql/comet/: CometDeltaCdfScanExec.scala  CometDeltaNativeScanExec.scala  DeltaInputFileBlockHolder.scala  DeltaPlanDataInjector.scala
contrib/delta/src/test/scala/org/apache/comet/contrib/delta/: CometDeltaCdcSuite.scala  CometDeltaCdfCredentialSuite.scala  CometDeltaColumnMappingSuite.scala  CometDeltaCredentialAuditSuite.scala  CometDeltaDppReproSuite.scala  CometDeltaFailedReadFileSuite.scala  CometDeltaFeaturesSuite.scala  CometDeltaFilterPushdownAuditSuite.scala  CometDeltaMarkerSuite.scala  CometDeltaMetadataColumnAuditSuite.scala  CometDeltaNativeSuite.scala  CometDeltaPendingReproSuite.scala  CometDeltaRegressionReproSuite.scala  CometDeltaRowTrackingMaterializedSuite.scala  CometDeltaRowTrackingMergeReproSuite.scala  CometDeltaSpecialCharFilenameSuite.scala  CometDeltaTestBase.scala  CometDeltaTypeRoundTripAuditSuite.scala  DeltaSmokeSuite.scala  FakeS3aSchemeFileSystem.scala
dev/: run-delta-all-failures.sh  run-delta-regression-targeted.sh  run-delta-regression.sh  run-delta-test.sh  verify-contrib-delta-gate.sh
dev/ci/: check-suites.py
dev/diffs/delta/: 4.1.0.diff
docs/source/contributor-guide/: contrib-extensions.md  delta-spark-tests.md
docs/source/user-guide/latest/: delta.md
native/: Cargo.toml
native/common/src/: lib.rs  spark_utf8.rs
native/contrib-spi/src/: lib.rs
native/core/: Cargo.toml
native/core/src/: lib.rs
native/core/src/delta/: engine.rs  error.rs  integration_tests.rs  jni.rs  mod.rs  predicate.rs  scan.rs
native/core/src/execution/: jni_api.rs  planner.rs
native/core/src/execution/operators/: delta_dv_filter.rs
native/core/src/execution/planner/: contrib.rs  contrib_delta_scan.rs  delta_scan.rs  operator_registry.rs
native/core/src/parquet/: missing_file_tolerant.rs  mod.rs  parquet_exec.rs  parquet_support.rs  row_number_opener.rs
native/proto/src/proto/: operator.proto
native/shuffle/src/spark_unsafe/: unsafe_object.rs
native/spark-expr/src/conversion_funcs/: cast.rs
native/spark-expr/src/struct_funcs/: get_struct_field.rs
spark/: pom.xml
spark/src/main/scala/org/apache/comet/: CometExecIterator.scala  CometSparkSessionExtensions.scala  Native.scala
spark/src/main/scala/org/apache/comet/delta/: DeltaReflection.scala
spark/src/main/scala/org/apache/comet/rules/: CometExecRule.scala  CometScanRule.scala  DeltaIntegration.scala
spark/src/main/scala/org/apache/comet/serde/: QueryPlanSerde.scala  arrays.scala  predicates.scala
spark/src/main/scala/org/apache/comet/serde/operator/: CometDeltaNativeScan.scala
spark/src/main/scala/org/apache/comet/spi/: CometExtensionRegistry.scala  CometOperatorSerdeExtension.scala
spark/src/main/scala/org/apache/comet/vector/: NativeUtil.scala
spark/src/main/scala/org/apache/spark/sql/comet/: CometDeltaNativeScanExec.scala  CometExecRDD.scala  CometNativeScanExec.scala  CometScanExec.scala  operators.scala
spark/src/main/scala/org/apache/spark/sql/comet/util/: Utils.scala
spark/src/main/spark-3.5/org/apache/spark/sql/comet/shims/: ShimSparkErrorConverter.scala
spark/src/main/spark-4.x/org/apache/spark/sql/comet/shims/: ShimSparkErrorConverter.scala
spark/src/test/scala/org/apache/comet/: CometDeltaNativeSuite.scala  CometFuzzDeltaBase.scala
spark/src/test/scala/org/apache/comet/parquet/: ParquetReadSuite.scala
