# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

# Standalone Cargo.toml -- this crate is outside the `native/` workspace root, so
# it cannot use `{ workspace = true }` value inheritance. Versions are kept in
# sync with the rest of the repo by convention; CI verifies the major/minor.

[package]
name = "comet-contrib-delta"
description = "Delta Lake integration for Apache DataFusion Comet"
version = "0.17.0"
edition = "2021"
rust-version = "1.86.0"
publish = false
license = "Apache-2.0"

[lib]
# rlib: linked INTO `libcomet` when `contrib-delta` is enabled on core. Never a cdylib
# on its own — there's no separate Delta library to ship.
crate-type = ["rlib"]

[dependencies]
# Skeleton only -- real deps land in subsequent commits as code is ported over from
# contrib-delta-pr2 (delta_kernel, datafusion, datafusion-comet-proto, etc.).
datafusion-comet-proto = { path = "../../../native/proto" }
